--- a/CNN_examples.ipynb
+++ b/CNN_examples.ipynb
@@ -6,7 +6,7 @@
       "name": "CNN_examples.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO1ikEcpc+vfusyubMDOVlR",
+      "authorship_tag": "ABX9TyNQjC67xfFmzfENpIly7ZNR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -516,39 +516,22 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 282
+          "height": 34
         },
-        "outputId": "c4b19fd8-4d1f-4b79-f30f-df54fd059750"
+        "outputId": "dae1a504-62d4-48f0-8e18-1795002eb0b5"
       },
       "source": [
-        "output2 = np.matmul(output[0,:,:,0],weights) + np.zeros(19)\n",
-        "plt.imshow(output2)"
+        "output2 = np.sum(np.matmul(output[0,:,:,0],weights) + np.zeros(19))\n",
+        "print(output2)"
       ],
-      "execution_count": 102,
+      "execution_count": 104,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f23420ca518>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 102
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQUAAAD4CAYAAADl7fPiAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4yLjEsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy+j8jraAAAN60lEQVR4nO3df6xkZX3H8feH5acUFaSsCBSNbmiQ\nlK3ZrDWlDRTFhRBXG9tCmhZbG6yRtCZNGtomYuw/No01UYx21Q3YKNJfq5u4ChvaREkUWcjyS6Fs\nCZS9xd0qCv4EFr79454197k7A3fnzNyZu/t+JTdzzvM8c84zuckn55w5c76pKiRpvyOmPQFJs8VQ\nkNQwFCQ1DAVJDUNBUuPIaU9gkKNzTB3L8dOehgZYfc5PJ7btPfceN7Ftq/UzfszT9VQG9c1kKBzL\n8bw+F057Ghrgz754/8S2/ZHX/PLEtq3WbXXL0D5PHyQ1eoVCkg1JHkiyK8nVA/qPSXJj139bklf2\n2Z+kyRs5FJKsAj4GXAycDVye5OxFw94JfL+qXgN8GPi7UfcnaXn0OVJYD+yqqoeq6mng88DGRWM2\nAtd3y/8KXJhk4MUNSbOhTyicBjy6YH131zZwTFXtA54AXjZoY0muTLIjyY5neKrHtCT1MTMXGqtq\nU1Wtq6p1R3HMtKcjHbb6hMIccMaC9dO7toFjkhwJvAT4Xo99SpqwPqFwO7AmyauSHA1cBmxdNGYr\ncEW3/HbgP8rfakszbeSbl6pqX5KrgJuAVcDmqrovyQeAHVW1Ffg08E9JdgGPMx8ckmZYrzsaq2ob\nsG1R2/sWLP8M+J0++9BsOffo7057CpqwmbnQKGk2GAqSGoaCpIahIKlhKEhqGAqSGoaCpIahIKlh\nKEhqGAqSGoaCpIahIKlhKEhqGAqSGoaCpIahIKlhKEhqGAqSGoaCpIahIKnRp5bkGUn+M8m3ktyX\n5M8HjDk/yRNJdnZ/7xu0LUmzo8/TnPcBf1FVdyY5Abgjyfaq+taicV+rqkt77EfSMhr5SKGqHquq\nO7vlHwLf5sBakpJWmLFcU0jySuBXgdsGdL8hyV1Jvpzktc+zDQvMSjOgVzEYgCS/APwb8N6qenJR\n953AmVX1oySXAF8A1gzaTlVtAjYBvDgnWVpOmpJeRwpJjmI+ED5bVf++uL+qnqyqH3XL24Cjkpzc\nZ5+SJqvPtw9hvlbkt6vqH4aMeXk3jiTru/1ZdVqaYX1OH34d+APgniQ7u7a/Bn4JoKo+wXyl6Xcn\n2Qf8FLjMqtPSbOtTdfpWIC8w5lrg2lH3IWn5eUejpIahIKlhKEhqGAqSGoaCpEbvOxp1eDnhiFXT\nnoImzCMFSQ1DQVLDUJDUMBQkNQwFSQ1DQVLDUJDUMBQkNQwFSQ1DQVLD25x1UF5yxHHTnoImzCMF\nSQ1DQVKjdygkeTjJPV2tyB0D+pPkI0l2Jbk7yev67lPS5IzrmsIFVfXdIX0XM18AZg3weuDj3auk\nGbQcpw8bgc/UvG8AL01y6jLsV9IIxhEKBdyc5I4kVw7oPw14dMH6bgYUorWWpDQbxnH6cF5VzSU5\nBdie5P6q+urBbsRaktJs6H2kUFVz3eteYAuwftGQOeCMBeund22SZlDfArPHJzlh/zJwEXDvomFb\ngT/svoX4NeCJqnqsz34lTU7f04fVwJauhuyRwOeq6itJ/hR+Xk9yG3AJsAv4CfBHPfcpaYJ6hUJV\nPQScO6D9EwuWC3hPn/1IWj7e0SipYShIahgKkhqGgqSGoSCpYShIahgKkhqGgqSGoSCpYShIahgK\nkhqGgqSGoSCpYShIahgKkhqGgqSGoSCpYShIahgKkhqGgqTGyKGQ5KyuqOz+vyeTvHfRmPOTPLFg\nzPv6T1nSJI38NOeqegBYC5BkFfMFXrYMGPq1qrp01P1IWl7jOn24EPjvqnpkTNuTNCXjCoXLgBuG\n9L0hyV1JvpzktcM2YIFZaTb0DoUkRwNvAf5lQPedwJlVdS7wUeALw7ZTVZuqal1VrTuKY/pOS9KI\nxnGkcDFwZ1XtWdxRVU9W1Y+65W3AUUlOHsM+JU3IOELhcoacOiR5ebpCk0nWd/v73hj2KWlCetWS\n7CpNvwl414K2hcVl3w68O8k+4KfAZV1tSUkzqm+B2R8DL1vUtrC47LXAtX32IWl5eUejpIahIKlh\nKEhqGAqSGoaCpIahIKlhKEhqGAqSGoaCpIahIKlhKEhqGAqSGoaCpIahIKlhKEhqGAqSGoaCpIah\nIKlhKEhqLCkUkmxOsjfJvQvaTkqyPcmD3euJQ957RTfmwSRXjGvikiZjqUcK1wEbFrVdDdxSVWuA\nW7r1RpKTgGuA1wPrgWuGhYek2bCkUKiqrwKPL2reCFzfLV8PvHXAW98MbK+qx6vq+8B2DgwXSTOk\nzzWF1VX1WLf8HWD1gDGnAY8uWN/dtUmaUWO50NgVeOlV5MUCs9Js6BMKe5KcCtC97h0wZg44Y8H6\n6V3bASwwK82GPqGwFdj/bcIVwBcHjLkJuCjJid0Fxou6NkkzaqlfSd4AfB04K8nuJO8EPgi8KcmD\nwBu7dZKsS/IpgKp6HPhb4Pbu7wNdm6QZtaRaklV1+ZCuCweM3QH8yYL1zcDmkWYnadn1KjCrw89T\n9cy0p6AJ8zZnSQ1DQVLDUJDUMBQkNQwFSQ1DQVLDUJDUMBQkNQwFSQ1DQVLDUJDU8LcPOig/q33T\nnoImzCMFSQ1DQVLDUJDUMBQkNQwFSQ1DQVLDUJDUeMFQGFJc9u+T3J/k7iRbkrx0yHsfTnJPkp1J\ndoxz4pImYylHCtdxYP3H7cA5VfUrwH8Bf/U877+gqtZW1brRpihpOb1gKAwqLltVN1f9/Na2bzBf\n+UnSIWActzn/MXDjkL4Cbk5SwD9W1aZhG0lyJXAlwLG8aAzT0iQ88dyz056CJqxXKCT5G2Af8Nkh\nQ86rqrkkpwDbk9zfHXkcoAuMTQAvzkm9itVKGt3I3z4keQdwKfD7XdXpA1TVXPe6F9gCrB91f5KW\nx0ihkGQD8JfAW6rqJ0PGHJ/khP3LzBeXvXfQWEmzYylfSQ4qLnstcALzpwQ7k3yiG/uKJNu6t64G\nbk1yF/BN4EtV9ZWJfApJY/OC1xSGFJf99JCx/wtc0i0/BJzba3aSlp13NEpqGAqSGoaCpIahIKlh\nKEhqGAqSGj7iXQflh8+tmvYUNGEeKUhqGAqSGoaCpIahIKlhKEhqGAqSGoaCpIahIKlhKEhqGAqS\nGt7mrIPyveeOm/YUNGEeKUhqGAqSGqMWmH1/krnuSc47k1wy5L0bkjyQZFeSq8c5cUmTMWqBWYAP\nd4Vj11bVtsWdSVYBHwMuBs4GLk9ydp/JSpq8kQrMLtF6YFdVPVRVTwOfBzaOsB1Jy6jPNYWrktzd\nnV6cOKD/NODRBeu7u7aBklyZZEeSHc/wVI9pSepj1FD4OPBqYC3wGPChvhOpqk1Vta6q1h3FMX03\nJ2lEI4VCVe2pqmer6jngkwwuHDsHnLFg/fSuTdIMG7XA7KkLVt/G4MKxtwNrkrwqydHAZcDWUfYn\nafm84B2NXYHZ84GTk+wGrgHOT7IWKOBh4F3d2FcAn6qqS6pqX5KrgJuAVcDmqrpvIp9C0thMrMBs\nt74NOODrSkmzy98+6KD84NkXTXsKmjBvc5bUMBQkNQwFSQ1DQVLDUJDUMBQkNQwFSQ1DQVLDUJDU\nMBQkNbzNWQflo/9z4cS2fUTzTB5Ni0cKkhqGgqSGoSCpYShIahgKkhqGgqSGoSCpsZQHt24GLgX2\nVtU5XduNwFndkJcCP6iqtQPe+zDwQ+BZYF9VrRvTvCVNyFJuXroOuBb4zP6Gqvq9/ctJPgQ88Tzv\nv6CqvjvqBCUtr6U8zfmrSV45qC9JgN8Ffmu805I0LX2vKfwGsKeqHhzSX8DNSe5IcuXzbchaktJs\n6Pvbh8uBG56n/7yqmktyCrA9yf1dFesDVNUmYBPAi3NS9ZyXJuSZZ1dNbNtWEJ0NIx8pJDkS+G3g\nxmFjqmque90LbGFwzUlJM6TP6cMbgfuravegziTHJzlh/zJwEYNrTkqaIS8YCl0tya8DZyXZneSd\nXddlLDp1SPKKJPvLxK0Gbk1yF/BN4EtV9ZXxTV3SJIxaS5KqeseAtp/Xkqyqh4Bze85P0jLzjkZJ\nDUNBUsNQkNQwFCQ1DAVJDUNBUiNVs3dHcZL/Ax5Z1HwycDj82vJw+Jx+xuk7s6p+cVDHTIbCIEl2\nHA7PYzgcPqefcbZ5+iCpYShIaqykUNg07Qksk8Phc/oZZ9iKuaYgaXmspCMFScvAUJDUWBGhkGRD\nkgeS7Epy9bTnMwlJHk5yT5KdSXZMez7jkmRzkr1J7l3QdlKS7Uke7F5PnOYc+xryGd+fZK77f+5M\ncsk053gwZj4UkqwCPgZcDJwNXJ7k7OnOamIuqKq1K/X77SGuAzYsarsauKWq1gC3dOsr2XUc+BkB\nPtz9P9dW1bYB/TNp5kOB+ec67qqqh6rqaeDzwMYpz0lL1D2o9/FFzRuB67vl64G3LuukxmzIZ1yx\nVkIonAY8umB9d9d2qFny4/APAaur6rFu+TvMP7rvUHRVkru704sVc4q0EkLhcHFeVb2O+dOk9yT5\nzWlPaDnU/Hfih+L34h8HXg2sBR4DPjTd6SzdSgiFOeCMBeund22HlMPscfh7kpwK0L3unfJ8xq6q\n9lTVs1X1HPBJVtD/cyWEwu3AmiSvSnI080+R3jrlOY3VYfg4/K3AFd3yFcAXpziXidgfep23sYL+\nn30rRE1cVe1LchVwE7AK2FxV9015WuO2GtgyX5qTI4HPHSqPw+9KBJwPnJxkN3AN8EHgn7tyAY8w\nX490xRryGc9Pspb5U6OHgXdNbYIHyducJTVWwumDpGVkKEhqGAqSGoaCpIahIKlhKEhqGAqSGv8P\neFfmbvM9MGYAAAAASUVORK5CYII=\n",
-            "text/plain": [
-              "<Figure size 432x288 with 1 Axes>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
+          "output_type": "stream",
+          "text": [
+            "637.262745777145\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
