--- a/CNN_examples.ipynb
+++ b/CNN_examples.ipynb
@@ -6,7 +6,7 @@
       "name": "CNN_examples.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQjC67xfFmzfENpIly7ZNR",
+      "authorship_tag": "ABX9TyPBNhVVg3sL/IbvuG9DTOnE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,11 +45,7 @@
       "metadata": {
         "id": "mZSVgVqWM1Tc",
         "colab_type": "code",
-        "outputId": "edfffdd1-4eee-4289-cfda-77fcd95b31f3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "%tensorflow_version 2.x\n",
@@ -59,16 +55,8 @@
         "%matplotlib inline\n",
         "import matplotlib.pyplot as plt\n"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "TensorFlow 2.x selected.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -114,7 +102,7 @@
       "metadata": {
         "id": "Hpf87iiAVvaO",
         "colab_type": "code",
-        "outputId": "cc914837-2915-4319-b360-c09aba6ef062",
+        "outputId": "4ee46e3d-2cb3-412f-fbea-ece4d0c335ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -129,7 +117,7 @@
         "print('Validation sample: ', nvalid)\n",
         "print('Test sample: ', ntest)"
       ],
-      "execution_count": 4,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +145,7 @@
       "metadata": {
         "id": "MItr-oPBWRNZ",
         "colab_type": "code",
-        "outputId": "d4091b80-7d85-4990-9605-9139434b026d",
+        "outputId": "0f5ba741-ebec-40f5-bb21-acbd91ce77b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
@@ -174,7 +162,7 @@
         "print('image 1 shape: ', np.shape(features));\n",
         "plt.imshow(features[:,:,0], cmap='gray_r');"
       ],
-      "execution_count": 5,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +225,7 @@
       "metadata": {
         "id": "S5-ETL5cWXVe",
         "colab_type": "code",
-        "outputId": "db5fb6ef-f246-495e-b127-2f8d2477f587",
+        "outputId": "34ed3648-f533-414d-a5ee-53589186b40d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
@@ -255,7 +243,7 @@
         "print('image shape: ', np.shape(output));\n",
         "plt.imshow(output[0,:,:,0], cmap='gray');"
       ],
-      "execution_count": 6,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +290,7 @@
       "metadata": {
         "id": "C_oQSCeaW8b_",
         "colab_type": "code",
-        "outputId": "4b22a65e-f37a-4fa6-8f4a-8dc881b59d5a",
+        "outputId": "dd1e1195-2778-4643-d87b-e726c9c0cbb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
@@ -319,7 +307,7 @@
         "print('image shape: ', np.shape(output));\n",
         "plt.imshow(output[0,:,:,0], cmap='gray');"
       ],
-      "execution_count": 7,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,11 +347,11 @@
       "metadata": {
         "id": "zZhVzh81XMQX",
         "colab_type": "code",
+        "outputId": "561d4ddb-d58d-4f2a-ee4c-ae375ef304d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        },
-        "outputId": "d08e620d-26d4-4900-e98a-4dffb72461a9"
+        }
       },
       "source": [
         "output = tf.nn.max_pool(\n",
@@ -374,7 +362,7 @@
         "print('image shape: ', np.shape(output));\n",
         "plt.imshow(output[0,:,:,0], cmap='gray');"
       ],
-      "execution_count": 8,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,11 +400,11 @@
       "metadata": {
         "id": "3cSKmDJ9apFz",
         "colab_type": "code",
+        "outputId": "db0f2d5f-93dc-4a97-8854-93f1e4475319",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        },
-        "outputId": "231891d6-bed5-467b-b2be-72f76ffbafb5"
+        }
       },
       "source": [
         "output = tf.nn.max_pool(\n",
@@ -427,7 +415,7 @@
         "print('image shape: ', np.shape(output));\n",
         "plt.imshow(output[0,:,:,0], cmap='gray');"
       ],
-      "execution_count": 9,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,11 +457,11 @@
       "metadata": {
         "id": "mVcpoma6cgLW",
         "colab_type": "code",
+        "outputId": "ec0e04f1-97c2-43b4-e3af-c4e3012a0625",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        },
-        "outputId": "b4e8a511-1c28-4817-a19d-091db4cad845"
+        }
       },
       "source": [
         "weights = np.zeros([19,19])\n",
@@ -481,19 +469,19 @@
         "weights[0:18,10]=1\n",
         "plt.imshow(weights)"
       ],
-      "execution_count": 21,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f2370021048>"
+              "<matplotlib.image.AxesImage at 0x7f2342589710>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 130
         },
         {
           "output_type": "display_data",
@@ -514,22 +502,26 @@
       "metadata": {
         "id": "2M8kpwqQflCL",
         "colab_type": "code",
+        "outputId": "60606d0b-cfa1-4ce9-ae17-2db12ba303ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "dae1a504-62d4-48f0-8e18-1795002eb0b5"
+        }
       },
       "source": [
-        "output2 = np.sum(np.matmul(output[0,:,:,0],weights) + np.zeros(19))\n",
-        "print(output2)"
+        "output2 = tf.nn.conv2d(\n",
+        "      input=np.reshape(output, [1,19,19,1]), #batch, height, width, depth\n",
+        "      filters=np.reshape(weights, [19,19,1,1]), #height, width, in_channels, out_channels\n",
+        "      strides=[1,1,1,1], \n",
+        "      padding=\"VALID\")\n",
+        "tf.print(output2)"
       ],
-      "execution_count": 104,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "637.262745777145\n"
+            "[[[[35.9372559]]]]\n"
           ],
           "name": "stdout"
         }
@@ -612,11 +604,11 @@
       "metadata": {
         "id": "t2uDr6Ld8XH1",
         "colab_type": "code",
+        "outputId": "2ee72870-340a-4127-adc8-3c2f612eebe1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 391
-        },
-        "outputId": "2ee72870-340a-4127-adc8-3c2f612eebe1"
+        }
       },
       "source": [
         "num_classes = 10\n",
@@ -634,7 +626,7 @@
         "\n",
         "model.summary() # print the model"
       ],
-      "execution_count": 86,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,11 +663,11 @@
       "metadata": {
         "id": "8jYJfHp6qNDB",
         "colab_type": "code",
+        "outputId": "0f4d4641-6979-4af7-8a0f-4a820bba22fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "0f4d4641-6979-4af7-8a0f-4a820bba22fe"
+        }
       },
       "source": [
         "LR = 0.001\n",
@@ -690,7 +682,7 @@
         "print('Test loss:', score[0])\n",
         "print('Test accuracy:', score[1])"
       ],
-      "execution_count": 87,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1707,11 +1699,11 @@
       "metadata": {
         "id": "KWuNkZNcshz9",
         "colab_type": "code",
+        "outputId": "a62003be-a449-4cbc-df50-8b2446d75854",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
-        },
-        "outputId": "a62003be-a449-4cbc-df50-8b2446d75854"
+        }
       },
       "source": [
         "plt.plot(history.history['accuracy'])\n",
@@ -1721,7 +1713,7 @@
         "plt.legend(['train', 'valid'], loc='upper left')\n",
         "plt.show()"
       ],
-      "execution_count": 89,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1742,11 +1734,11 @@
       "metadata": {
         "id": "1PijNOky1IwS",
         "colab_type": "code",
+        "outputId": "ca0699e9-a61e-49a5-ac95-46f59793fe19",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
-        },
-        "outputId": "ca0699e9-a61e-49a5-ac95-46f59793fe19"
+        }
       },
       "source": [
         "plt.plot(history.history['loss'])\n",
@@ -1756,7 +1748,7 @@
         "plt.legend(['train', 'val'], loc='upper left')\n",
         "plt.show()"
       ],
-      "execution_count": 90,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1777,11 +1769,11 @@
       "metadata": {
         "id": "lMZjJfiH1gcH",
         "colab_type": "code",
+        "outputId": "aa79d5bc-d08a-48ee-cba2-f98fe58aac42",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "aa79d5bc-d08a-48ee-cba2-f98fe58aac42"
+        }
       },
       "source": [
         "for image, label in test:\n",
@@ -1789,7 +1781,7 @@
         "  for i in np.arange(100):\n",
         "    tf.print('predicted: ', np.argmax(pred[i]), ' - truth: ', label[i])"
       ],
-      "execution_count": 100,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
